--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "BigRedButton-Server",
   "version": "0.1.0",
-  "description": "An example module to illustrate the usage of a package.json",
+  "description": "Server for sending GCM messages to the BigRedButton android-app.",
   "author": "Stefan Wanitzek <stefan@dreambyte.eu>",
-  "main": "app.js",
+  "main": "server.js",
   "repository": {
-  "type": "git",
-  "url": "https://github.com/swanitzek/BigRedButton"
-},
+    "type": "git",
+    "url": "https://github.com/swanitzek/BigRedButton"
+  },
   "bugs": {
-  "url": "https://github.com/swanitzek/BigRedButton/issues"
-},
+    "url": "https://github.com/swanitzek/BigRedButton/issues"
+  },
   "dependencies": {
+    "body-parser": "1.13.x",
     "express": "4.13.x",
     "node-gcm": "0.11.x"
   }
